# ptycho

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build.yml
arduino_src/: README.md
arduino_src/led_matrix_controller/: README.md  comms.cpp  comms.h  drawing.cpp  drawing.h  led_matrix_controller.ino
arduino_src/serial_reader/: README.md  serial_reader.ino
misc/: fp_recover.ipynb  fp_simulation.ipynb  fp_workflow.ipynb  hdr_datasets.ipynb  zernike.ipynb
misc/matlab/: FP_freeze.m  FP_genZernike.m:Zone.Identifier
misc/matlab/FP_funcs/: FP_calibrateAngle.m  FP_genZernike.m  zernfun.m
python_src/leb/freeze/: __init__.py  acquisition.py  calibration.py  datasets.py  fp.py  simulation.py  zernike.py
python_src/leb/freeze/scripts/: calibrate_ptycho.py
python_src/leb/ptycho/: __init__.py  acquisition.py  calibration.py  datasets.py  fp.py  simulation.py
python_src/leb/ptycho/scripts/: calibrate_ptycho.py
tests/leb-freeze/: test_acquisition.py  test_calibration.py  test_datasets.py  test_fp.py  test_simulation.py  test_zernike.py
tests/leb-ptycho/: test_acquisition.py  test_calibration.py  test_datasets.py  test_fp.py  test_simulation.py  test_zernike.py
umanager/: README.md  calibrate.bsh  phase_contrast.bsh
