[tool.poetry]
name = "leb-freeze"
version = "1.0.0"
description = "Imaging processing with Fourier ptychography"
authors = [
    "Kyle M. Douglass <kyle.douglass@epfl.ch>",
    "Christian Zimmerli <christian.zimmerli@epfl.ch>"
]
readme = "README.md"
packages = [
    { include = "leb", from = "python_src" }
]

[tool.poetry.dependencies]
numpy = "*"
python = "^3.8"
scikit-image = "*"
zernike = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/leb-freeze",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
