[tool.poetry]
name = "leb-freeze"
version = "1.1.1"
description = "Imaging processing with Fourier ptychography"
authors = [
    "Kyle M. Douglass <kyle.douglass@epfl.ch>",
    "Christian Zimmerli <christian.zimmerli@epfl.ch>"
]
readme = "README.md"
packages = [
    { include = "leb", from = "python_src" }
]

[tool.poetry.dependencies]
h5py = "*"  # For zernike package
numpy = "*"
pymmcore-plus = "*"
python = "^3.8"
scikit-image = "*"
tifffile = { extras = ["all"], version = "*" }
tqdm = "*"
zernike = "*"

[tool.poetry.dev-dependencies]
black = "*"
jupyter = "*"
pytest = "*"
ruff = "*"

[tool.poetry.scripts]
calibrate_ptycho = "leb.freeze.scripts.calibrate_ptycho:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/leb-freeze",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
