[tool.poetry]
name = "leb-ptycho"
version = "3.0.0"
description = "Imaging processing with Fourier ptychography"
authors = [
    "Kyle M. Douglass <kyle.douglass@epfl.ch>",
    "Christian Zimmerli <christian.zimmerli@epfl.ch>"
]
readme = "README.md"
packages = [
    { include = "leb", from = "python_src" }
]

[tool.poetry.dependencies]
h5py = "*"  # For zernike package
numpy = "*"
pymmcore-plus = "*"
python = "^3.8"
scikit-image = "*"
scipy = "*"
tifffile = { extras = ["all"], version = "*" }
tqdm = "*"
zernike = "*"

[tool.poetry.dev-dependencies]
black = "*"
jupyter = "*"
pytest = "*"
ruff = "*"

[tool.poetry.scripts]
calibrate_ptycho = "leb.ptycho.scripts.calibrate_ptycho:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/leb-ptycho",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
